--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       class="row-span-2 bg-emerald-300 flex flex-col justify-between py-5 px-2"
     >
       <h1 class="text-2xl font-bold px-6">Calculadora de Investimentos</h1>
-      <form class="w-full">
+      <form id="investment-form" class="w-full">
         <!-- Investimento inicial -->
         <div class="flex w-full flex-col px-6 my-3">
           <label class="font-bold text-gray-700" for="starting-amount"
@@ -30,7 +30,9 @@
               class="w-5/6 rounded-r-lg px-2"
               type="text"
               placeholder="0.00"
+              required
               id="starting-amount"
+              name="starting-amount"
             />
           </div>
         </div>
@@ -53,6 +55,7 @@
               type="text"
               placeholder="0.00"
               id="additional-contribution"
+              name="additional-contribution"
             />
           </div>
         </div>
@@ -72,6 +75,7 @@
               class="w-2/3 rounded-l-lg px-2"
               type="text"
               placeholder="0"
+              required
               id="time-amount"
             />
             <!-- <input class="w-1/3" type="text" value="mensal" /> -->
@@ -79,6 +83,7 @@
               class="w-1/3 text-center rounded-r-lg border-l-2 border-emerald-600 hover:bg-emerald-900 hover:text-slate-200"
               name=""
               id="time-amount-period"
+              name="time-amount-period"
             >
               <option value="monthly">Mensal</option>
               <option value="yearly">Anual</option>
@@ -103,13 +108,16 @@
               class="w-1/2 px-2"
               type="text"
               placeholder="0"
+              required
               id="return-rate"
+              name="return-rate"
             />
             <!-- <input class="w-1/3" type="text" value="mensal" /> -->
             <select
               class="w-1/3 text-center rounded-r-lg border-l-2 border-emerald-600 hover:bg-emerald-900 hover:text-slate-200"
               name=""
               id="evaluation-period"
+              name="evaluation-period"
             >
               <option value="monthly">Mensal</option>
               <option value="yearly">Anual</option>
@@ -134,7 +142,9 @@
               class="w-5/6 rounded-r-lg px-2"
               type="text"
               placeholder="0"
+              required
               id="tax-rate"
+              name="tax-rate"
             />
           </div>
         </div>
@@ -142,6 +152,9 @@
       </form>
       <div class="flex h-12 px-6 my-8 w-full gap-2">
         <button
+          id="calculate-results"
+          form="investment-form"
+          type="submit"
           class="w-1/2 rounded-lg bg-emerald-950 text-slate-200 hover:bg-emerald-800"
         >
           Calcular
@@ -150,5 +163,6 @@
       </div>
     </aside>
     <main><p>Resultados</p></main>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
