--- a/index.html
+++ b/index.html
@@ -165,7 +165,20 @@
         </button>
       </div>
     </aside>
-    <main><p>Resultados</p></main>
+    <main class="h-full">
+      <section id="chats_container">
+        <div class="h-[36dvh]">
+          <p>Resultado Final</p>
+          <canvas id="final-money-distribution"></canvas>
+        </div>
+
+        <div class="h-[56dvh]">
+          <p>Progressão</p>
+          <canvas id="progression"></canvas>
+        </div>
+      </section>
+    </main>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
