--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
     </aside>
     <main class="row-span-2 col-span-2">
-      <section id="chats_container" class="h-full">
+      <!-- <section id="chats_container" class="h-full">
         <div class="h-[36%] flex flex-col items-center pb-10">
           <p class="font-bold text-lg">Resultado Final</p>
           <canvas id="final-money-distribution"></canvas>
@@ -176,7 +176,7 @@
           <p class="font-bold text-lg">Progressão</p>
           <canvas id="progression"></canvas>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <script type="module" src="./main.js"></script>
