--- a/index.html
+++ b/index.html
@@ -165,18 +165,72 @@
         </button>
       </div>
     </aside>
-    <main class="row-span-2 col-span-2">
-      <!-- <section id="chats_container" class="h-full">
-        <div class="h-[36%] flex flex-col items-center pb-10">
-          <p class="font-bold text-lg">Resultado Final</p>
-          <canvas id="final-money-distribution"></canvas>
-        </div>
+    <main class="row-span-2 col-span-2 relative">
+      <!--  -->
+      <button
+        id="slide-arrow-previous"
+        class="absolute top-0 bottom-0 left-0 text-5xl cursos-pointer bg-slate-200 opacity-50 w-8 hover:opacity-100 focus:opacity-100"
+      >
+        &#8249;
+      </button>
+      <button
+        id="slide-arrow-next"
+        class="absolute top-0 bottom-0 right-0 text-5xl cursos-pointer bg-slate-200 opacity-50 w-8 hover:opacity-100 focus:opacity-100"
+      >
+        &#8250;
+      </button>
+      <!--  -->
 
-        <div class="h-[56%] flex flex-col items-center">
-          <p class="font-bold text-lg">Progressão</p>
-          <canvas id="progression"></canvas>
-        </div>
-      </section> -->
+      <div
+        id="carousel"
+        class="h-full w-full flex overflow-x-auto scroll-smooth"
+      >
+        <section id="chats_container" class="h-full basis-full shrink-0">
+          <div class="h-[36%] flex flex-col items-center pb-10">
+            <p class="font-bold text-lg">Resultado Final</p>
+            <canvas id="final-money-distribution"></canvas>
+          </div>
+
+          <div class="h-[56%] flex flex-col items-center">
+            <p class="font-bold text-lg">Progressão</p>
+            <canvas id="progression"></canvas>
+          </div>
+        </section>
+
+        <section
+          id="table-container"
+          class="h-full overflow-y-auto basis-full shrink-0"
+        >
+          <p class="font-bold text-lg text-center">Resultados Mensais</p>
+          <table
+            id="results-table"
+            class="w-full max-h-full border border-separate"
+          >
+            <!-- <thead>
+            <th>Mês</th>
+            <th>Juros</th>
+            <th>Total Investido</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="text-center">0</td>
+              <td class="text-center">0</td>
+              <td class="text-center">10000</td>
+            </tr>
+            <tr>
+              <td class="text-center">1</td>
+              <td class="text-center">10</td>
+              <td class="text-center">11000</td>
+            </tr>
+            <tr>
+              <td class="text-center">2</td>
+              <td class="text-center">23</td>
+              <td class="text-center">12000</td>
+            </tr>
+          </tbody> -->
+          </table>
+        </section>
+      </div>
     </main>
 
     <script type="module" src="./main.js"></script>
